fix full height screen on mobile

--- a/src/Components/Generic/LoadingScreen/LoadingStyling.scss
+++ b/src/Components/Generic/LoadingScreen/LoadingStyling.scss
@@ -5,6 +5,7 @@
     left:0;
     z-index: 5800;
     height: 100vh;
+    height: 100svh;
     overflow: hidden;
     .loading--backdrop{
         position: absolute;
