--- a/src/Pages/Reels/Reels.scss
+++ b/src/Pages/Reels/Reels.scss
@@ -61,6 +61,7 @@
     .reels--main--container{
         width:100%;
         height: 100vh;
+        height: 100svh;
         background-color:#1a1a1a;
         position: relative;
         overflow: hidden;
@@ -69,6 +70,9 @@
             padding: 40px 40px 0;
             justify-content:space-between;
             color:#fff;
+            @media only screen and (max-width: 570px){
+                display: none;
+            }
             a, h1{
                 color:#fff;
                 text-decoration:none;
@@ -97,23 +101,27 @@
             align-items:center;
             overflow: hidden;
             height:100vh;
+            height: 100svh;
             .reel--video--box{
                 max-width:372px;
-                max-height:1200px;
                 width:auto;
                 min-width: 337px;
-                height:100%;                    
+                height: 100%;                   
                 border-radius: 12px;
                 position: relative;
                 overflow-y: scroll;
                 scroll-snap-type: y mandatory;
-                height: 85vh;
                 position: relative; 
                 -ms-overflow-style: none;
                 scrollbar-width: none;
                 box-shadow: 0 10px 30px rgba(0,0,0,0.3);
                 @media only screen and (max-width: 400px) {
                     width: 100%;
+                    max-height: 100vh;
+                    max-height: 100svh;
+                }
+                @media only screen and (min-width: 570px){
+                    max-height: 590px;
                 }
                 .reel--video--content{
                     width: 100%;
@@ -204,7 +212,7 @@
                             position: absolute;
                             left:0;
                             top:0;
-                            @media only screen and (max-width:670px){
+                            @media only screen and (max-width:570px){
                                 border-radius: 0px;
                             }
                         }
@@ -296,7 +304,6 @@
                                     align-self: flex-end;
                                     border: 1px solid #dbdbdb;
                                     border-radius:22px;
-                                    // min-height:44px;
                                     padding: 10px 6px;
                                     background: transparent;
                                     input{
@@ -403,8 +410,9 @@
                     }
                     
                 } 
-                @media only screen and (max-width: 670px){
+                @media only screen and (max-width: 570px){
                     height: 100vh;
+                    height: 100svh;
                     width:100%;
                     border-radius: 0px;
                     max-width: 100%;                   
@@ -414,7 +422,7 @@
                     width: 0;
                 }       
             }
-            @media only screen and (max-width: 670px){
+            @media only screen and (max-width: 570px){
                 height: auto;
                 margin:0px ;
             }
